--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,7 +2,7 @@
   box-sizing: border-box; }
 
 body {
-  background-color:redorange;
+  background-color:orange;
   padding: 0;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
