--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,7 +8,7 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #FF0000; }
+  color: #A46BFF; }
 
 a {
   color: #1e6bb8;
